changes on look

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1395,6 +1395,9 @@ a {
 .cid-uaChoEe4O9 .mbr-section-btn {
   text-align: left;
 }
+.cid-uaChoEe4O9 .mbr-section-title {
+  color: #232323;
+}
 .cid-uaChoEegWm {
   padding-top: 5rem;
   padding-bottom: 5rem;
