--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -905,7 +905,7 @@ a {
   height: 90px;
   padding: 0.5rem 0.6rem;
   flex-wrap: nowrap;
-  background: rgba(255, 255, 255, 0.6) !important;
+  background: rgba(237, 239, 235, 0.6) !important;
   left: 0;
   right: 0;
   -webkit-box-pack: justify;
@@ -917,7 +917,7 @@ a {
   align-items: center;
   border-radius: 100vw;
   margin-top: 1rem;
-  background-color: #ffffff;
+  background-color: #edefeb;
   box-shadow: 0 30px 60px 0 rgba(27, 31, 10, 0.08);
 }
 @media (max-width: 992px) {
@@ -946,8 +946,8 @@ a {
   border-radius: 1.5rem;
   transition: 0.3s all !important;
   min-width: auto;
-  background: #ffffff;
-  background: rgba(255, 255, 255, 0.6) !important;
+  background: #edefeb;
+  background: rgba(237, 239, 235, 0.6) !important;
 }
 .cid-uaChoEeb4U .nav-item:focus,
 .cid-uaChoEeb4U .nav-link:focus {
@@ -1106,7 +1106,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-uaChoEeb4U .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #edefeb;
 }
 .cid-uaChoEeb4U .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1270,10 +1270,10 @@ a {
     width: 100%;
     padding: 1rem;
     border-radius: 1.5rem;
-    background: #ffffff;
+    background: #edefeb;
     opacity: 1;
-    border-color: rgba(255, 255, 255, 0.6) !important;
-    background: rgba(255, 255, 255, 0.6) !important;
+    border-color: rgba(237, 239, 235, 0.6) !important;
+    background: rgba(237, 239, 235, 0.6) !important;
     backdrop-filter: blur(8px);
   }
   .cid-uaChoEeb4U .navbar-nav .nav-item .nav-link::after {
@@ -1401,7 +1401,7 @@ a {
 .cid-uaChoEegWm {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #a6a99c;
+  background-color: #7787a5;
 }
 .cid-uaChoEegWm .mbr-fallback-image.disabled {
   display: none;
@@ -1416,7 +1416,7 @@ a {
   top: 0;
 }
 .cid-uaChoEegWm .card-wrapper {
-  background: #ffffff;
+  background: #edefeb;
 }
 @media (max-width: 767px) {
   .cid-uaChoEegWm .card-wrapper {
@@ -1446,7 +1446,7 @@ a {
 .cid-uaChoEgDXh {
   padding-top: 2rem;
   padding-bottom: 3rem;
-  background-color: #a6a99c;
+  background-color: #7787a5;
 }
 .cid-uaChoEgDXh .mbr-fallback-image.disabled {
   display: none;
@@ -1461,7 +1461,7 @@ a {
   top: 0;
 }
 .cid-uaChoEgDXh .card-wrapper {
-  background: #ffffff;
+  background: #edefeb;
 }
 @media (max-width: 767px) {
   .cid-uaChoEgDXh .card-wrapper {
@@ -1486,7 +1486,7 @@ a {
 .cid-uaChoEg4XI {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #a6a99c;
+  background-color: #7787a5;
 }
 .cid-uaChoEg4XI .mbr-fallback-image.disabled {
   display: none;
@@ -1509,7 +1509,7 @@ a {
   }
 }
 .cid-uaChoEg4XI .item-wrapper {
-  background: #ffffff;
+  background: #f7f7f7;
   padding: 2.25rem;
   height: 100%;
   display: flex;
@@ -1567,7 +1567,7 @@ a {
 .cid-uaChoEiIRl {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #a6a99c;
+  background-color: #7787a5;
 }
 .cid-uaChoEiIRl .mbr-overlay {
   background-color: #7787a5;
@@ -1591,7 +1591,7 @@ a {
 .cid-uaChoEfnkO {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #a6a99c;
+  background-color: #7787a5;
 }
 .cid-uaChoEfnkO .item-mb {
   margin-bottom: 2rem;
@@ -1619,7 +1619,7 @@ a {
 }
 .cid-uaChoEfnkO .item-content {
   padding: 2.25rem 2.25rem 0;
-  background: #ffffff;
+  background: #edefeb;
 }
 @media (min-width: 992px) and (max-width: 1200px) {
   .cid-uaChoEfnkO .item-content {
@@ -1635,7 +1635,7 @@ a {
   border-radius: 2rem;
   overflow: hidden;
   margin-bottom: 2rem;
-  background: #ffffff;
+  background: #edefeb;
   padding: 0rem;
   height: 100%;
   display: flex;
@@ -1702,7 +1702,7 @@ a {
 .cid-uaCZpGzLuS {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #a6a99c;
+  background-color: #7787a5;
 }
 .cid-uaCZpGzLuS .mbr-iconfont {
   font-size: 1.2rem !important;
@@ -1759,7 +1759,7 @@ a {
   border-radius: 2rem;
 }
 .cid-uaCZpGzLuS .card {
-  background: #ffffff;
+  background: #edefeb;
   padding: 2.25rem;
   border-radius: 2rem;
   margin-bottom: 1rem;
@@ -1794,7 +1794,7 @@ a {
 .cid-uaCWcGvNLF {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #a6a99c;
+  background-color: #232323;
 }
 .cid-uaCWcGvNLF .mbr-fallback-image.disabled {
   display: none;
@@ -1820,11 +1820,17 @@ a {
 }
 .cid-uaCWcGvNLF .mbr-iconfont {
   font-size: 3rem;
-  color: #2e481a;
+  color: #ffffff;
   padding-right: 2rem;
 }
 .cid-uaCWcGvNLF .content-head {
   max-width: 800px;
+}
+.cid-uaCWcGvNLF .mbr-section-title {
+  color: #edefeb;
+}
+.cid-uaCWcGvNLF .card-text {
+  color: #ffffff;
 }
 .cid-uaCVC8J3Zh {
   padding-top: 1rem;
