--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1343,7 +1343,7 @@ a {
 }
 .cid-uaChoEe4O9 {
   display: flex;
-  background-image: url("../../../assets/images/mbr-1868x1920.png");
+  background-image: url("../../../assets/images/mbr-1868x1920.webp");
 }
 .cid-uaChoEe4O9 .mbr-overlay {
   background-color: #000000;
